--- a/css/style.css
+++ b/css/style.css
@@ -1881,3 +1881,22 @@ input:focus, .form-control:focus {
 .form-check {
     margin-right: 20px;
 }
+
+
+.whatsapp {
+  position:fixed;
+  width:60px;
+  height:60px;
+  bottom:70px;
+  right:10px;
+  background-color:#25d366;
+  color:#FFF;
+  border-radius:50px;
+  text-align:center;
+  font-size:30px;
+  z-index:100;
+}
+
+.whatsapp-icon {
+  margin-top:13px;
+}
