--- a/css/base.css
+++ b/css/base.css
@@ -17,13 +17,13 @@ INDEX:
 @import url('https://fonts.googleapis.com/css2?family=Marcellus&display=swap" rel="stylesheet');
 @import url('https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet');
  :root {
-     --pbmit-global-color: #b8967e;
+     --pbmit-global-color: #bfb26c;
      --pbmit-secondary-color: #0a1d35;
      --pbmit-light-color: #f7f6f4;
      --pbmit-white-color: #ffffff;
      --pbmit-blackish-color: #0a1d35;
      --pbmit-link-color-normal: #0a1d35;
-     --pbmit-link-color-hover: #b8967e;
+     --pbmit-link-color-hover: #bfb26c;
      --pbmit-global-color-rgb: rgb(184, 150, 126);
      --pbmit-secondary-color-rgb:rgb(10, 29, 53);
      --pbmit-responsive-breakpoint: 1200px;
