--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ img {
     padding: 40px 0px 40px 50px;
 }
 .about-us-home1{
-    padding: 150px 0 0;
+    padding: 150px 0 50px;
 }
 .service-section-home1{
     background-image: url(../images/bg/row-bg-new-0-1.png);
@@ -1905,7 +1905,7 @@ input:focus, .form-control:focus {
   font-size: 24px; /* Ajusta el tamaño del botón en el menú móvil */
   width: 50px;
   height: 50px;
-  background-color: #b8967e; /* Color de fondo del botón en el menú móvil */
+  background-color: #bfb26c;; /* Color de fondo del botón en el menú móvil */
   border: none;
   border-radius: 8px;
   color: #ffffff; /* Color del ícono del botón en el menú móvil */
