--- a/css/responsive.css
+++ b/css/responsive.css
@@ -11,7 +11,9 @@ body {
 
 @media (min-width: 1400px){
     .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-        max-width: 1270px;
+        max-width: 1270px;     
+    	margin-left: 80px;
+
     }
 	.widget .footer-social-links{
 		padding-top: 20px;
