--- a/css/responsive.css
+++ b/css/responsive.css
@@ -12,7 +12,7 @@ body {
 @media (min-width: 1400px){
     .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
         max-width: 1270px;     
-    	margin-left: 80px;
+/*    	margin-left: 80px;*/
 
     }
 	.widget .footer-social-links{
@@ -395,7 +395,7 @@ body {
 	.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
 		padding-right: calc(var(--bs-gutter-x) * .8);
 		padding-left: calc(var(--bs-gutter-x) * .8);
-		padding-bottom:40px;
+		padding-bottom:10px;
 	} 
 	.sticky-header{
 		position: relative  !important;
@@ -1448,7 +1448,7 @@ body {
 	}
 	/** Homepage 01 **/
 	.site-navigation {
-		padding-right: 30px;
+/*		padding-right: 30px;*/
 	}
 	.pbmit-viewtype-carousel .pbmit-service-style-1swiper-slide-active .pbminfotech-box-content {
         border: 0;
