--- a/css/responsive.css
+++ b/css/responsive.css
@@ -395,7 +395,7 @@ body {
 	.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
 		padding-right: calc(var(--bs-gutter-x) * .8);
 		padding-left: calc(var(--bs-gutter-x) * .8);
-		padding-bottom:10px;
+		padding-bottom:40px;
 	} 
 	.sticky-header{
 		position: relative  !important;
@@ -1448,7 +1448,7 @@ body {
 	}
 	/** Homepage 01 **/
 	.site-navigation {
-/*		padding-right: 30px;*/
+		padding-right: 30px;
 	}
 	.pbmit-viewtype-carousel .pbmit-service-style-1swiper-slide-active .pbminfotech-box-content {
         border: 0;
