--- a/css/style.css
+++ b/css/style.css
@@ -1883,22 +1883,50 @@ input:focus, .form-control:focus {
 }
 
 
-.whatsapp {
+/*.whatsapp {
   position:fixed;
-  width:45px;
-  height:45px;
-  bottom:40px;
-  right:20px;
+  width:60px;
+  height:60px;
+  bottom:70px;
+  right:10px;
   color:#FFF;
-  border-radius:50%;
+  border-radius:50px;
   text-align:center;
-  font-size:16px;
+  font-size:30px;
   z-index:100;
 }
 
-/*.whatsapp-icon {
+.whatsapp-icon {
   margin-top:13px;
 }*/
+/* Estilo para el botón de WhatsApp */
+.whatsapp-button {
+    position: fixed;
+    z-index: 200;
+    opacity: 0;
+    bottom: 70px; /* Ajusta la posición vertical según tu preferencia */
+    right: 20px;
+    width: 45px;
+    height: 45px;
+    line-height: 40px; /* Ajusta la altura del texto verticalmente centrado */
+    font-size: 28px; /* Tamaño del ícono de WhatsApp */
+    background-color: #198754;
+    text-align: center;
+    border: 3px solid #eeeeee;
+    border-radius: 50%;
+    color: #ffffff;
+}
+
+/* Estilo cuando el botón de WhatsApp es visible */
+.whatsapp-button.show {
+    opacity: 1;
+}
+
+/* Estilo al pasar el mouse sobre el botón de WhatsApp */
+.whatsapp-button:hover {
+    background-color: var(--pbmit-secondary-color); /* Puedes ajustar el color de fondo al pasar el mouse */
+}
+
 
 .navbar-toggler {
   font-size: 24px; /* Ajusta el tamaño del botón en el menú móvil */
